syntax = "proto3";

package bosatsu;

enum Variance {
  Phantom = 0;
  Covariant = 1;
  Contravariant = 2;
  Invariant = 3;
}

message TypeKind {

}

message ConsKind {
  Variance variance = 1;
  Kind input = 2;
  Kind output = 3;
}

message Kind {
  oneof value {
    TypeKind type = 1;
    ConsKind cons = 2;
    int64 encoded = 3;
  }
}

message TypeConst {
  int32 packageName = 1;
  int32 typeName = 2;
}

message TypeVar {
  int32 varName = 1;
}

message VarKind {
  int32 varName = 1;
  Kind kind = 2;
}

message TypeForAll {
  repeated VarKind varKinds = 1;
  int32 typeValue = 2;
}

message TypeExists {
  repeated VarKind varKinds = 1;
  int32 typeValue = 2;
}

// represents left[right] type application
message TypeApply {
  int32 left = 1;
  int32 right = 2;
}

message Type {
  oneof value {
    TypeConst typeConst = 1;
    TypeVar typeVar = 2;
    TypeForAll typeForAll = 3;
    TypeApply typeApply = 4;
    TypeExists typeExists = 5;
  }
}

message TypeParam {
  TypeVar typeVar = 1;
  Variance variance = 2;
  Kind kind = 3;
}

message FnParam {
  int32 name = 1;
  int32 typeOf = 2;
  int32 defaultBindingName = 3; // 1-based string table index; 0 means no default
  int32 defaultTypeOf = 4; // 1-based type table index; 0 means absent
}

message ConstructorFn {
  int32 name = 1;
  repeated FnParam params = 2;
  repeated TypeParam exists = 3;
}

message DefinedType {
  TypeConst typeConst = 1;
  repeated TypeParam typeParams = 2;
  repeated ConstructorFn constructors = 3;
}

message DefinedTypeReference {
  oneof value {
    int32 localDefinedTypePtr = 1; /* a 1-based pointer into the list of local defined types */
    TypeConst importedDefinedType = 2; /* a string-based reference to a type defined in another package */
  }
}

message ConstructorPtr {
  int32 definedTypePtr = 1; /* 1-based pointer into the list of types */
  int32 constructorPtr = 2; /* 1-based pointer into the list of constructors for this type */
}

message ImportedConstructor {
  int32 packageName = 1;
  int32 typeName = 2;
  int32 constructorName = 3;
}

message ConstructorReference {
  oneof value {
    ConstructorPtr localConstructor = 1;
    ImportedConstructor importedConstructor = 2;
  }
}

message Referant {
  oneof referant {
    int32 value = 1; /* an exported value which has a given type, the index is the into the type table */
    DefinedTypeReference definedType = 2;
    ConstructorReference constructor = 3;
  }
}

enum ExportKind {
  Binding = 0;
  TypeName = 1;
  ConstructorName = 2;
}
message ExportedName {
  ExportKind exportKind = 1;
  int32 name = 2;
  Referant referant = 3;
}

/*
 * This is an interface of a package: all public types, and the type of all exported values
 */
message Interface {
  repeated string strings = 1;
  repeated Type types = 2;
  repeated DefinedType definedTypes = 3;
  int32 packageName = 4;
  repeated ExportedName exports = 5;
}

message Interfaces {
  repeated Interface interfaces = 1;
}

message ImportedName {
  int32 originalName = 1;
  int32 localName = 2;
  repeated Referant referant = 3;
}

message Imports {
  int32 packageName = 1;
  repeated ImportedName names = 2;
}

enum RecursionKind {
  NotRec = 0;
  IsRec = 1;
}

message GenericExpr {
  repeated VarKind forAlls = 1;
  repeated VarKind exists = 2;
  int32 expr = 3;
}

message AnnotationExpr {
  int32 expr = 1;
  int32 typeOf = 2;
  QuantifierEvidence quantifierEvidence = 3;
}

message QuantifierSolution {
  int32 varName = 1;
  Kind kind = 2;
  int32 typeOf = 3;
}

message QuantifierEvidence {
  int32 sourceType = 1;
  int32 targetType = 2;
  repeated QuantifierSolution forallSolved = 3;
  repeated QuantifierSolution existsHidden = 4;
}

message LambdaExpr {
  repeated int32 varName = 1;
  repeated int32 typeOfVar = 2;
  int32 resultExpr = 3;
}

message VarExpr {
  int32 packageName = 1;
  int32 varName = 2;
  int32 typeOfVar = 3;
}

message AppExpr {
  int32 fnExpr = 1;
  repeated int32 argExpr = 2;
  int32 resultType = 3;
}

message LetExpr {
  int32 letName = 1;
  int32 nameExpr = 2;
  int32 resultExpr = 3;
  RecursionKind rec = 4;
}

message LoopArg {
  int32 varName = 1;
  int32 initExpr = 2;
}

message LoopExpr {
  repeated LoopArg args = 1;
  int32 bodyExpr = 2;
}

message RecurExpr {
  repeated int32 argExpr = 1;
  int32 typeOf = 2;
}

message Literal {
  oneof value {
    string stringValue = 1;
    int64 intValueAs64 = 2;
    string intValueAsString = 3;
    int32 charValue = 4;
    fixed64 float64ValueAsBits = 5;
  }
}

message WildCardPat { }

message NamedPat {
  int32 name = 1;
  int32 pattern = 2;
}

message ListPart {
  oneof value {
    WildCardPat unnamedList = 1;
    int32 namedList = 2;
    int32 itemPattern = 3;
  }
}

message ListPat {
  repeated ListPart parts = 1;
}

message StrPart {
  oneof value {
    WildCardPat unnamedStr = 1;
    int32 namedStr = 2;
    int32 literalStr = 3;
    WildCardPat unnamedChar = 4;
    int32 namedChar = 5;
  }
}

message StrPat {
  repeated StrPart parts = 1;
}

message AnnotationPat {
  int32 pattern = 1;
  int32 typeOfPattern = 2;
}

message StructPattern {
  int32 packageName = 1;
  int32 constructorName = 2;
  repeated int32 params = 3;
}

message UnionPattern {
  repeated int32 patterns = 1;
}

message Pattern {
  oneof value {
    WildCardPat wildPat = 1;
    Literal litPat = 2;
    int32 varNamePat = 3;
    NamedPat namedPat = 4;
    ListPat listPat = 5;
    AnnotationPat annotationPat = 6;
    StructPattern structPat = 7;
    UnionPattern unionPat = 8;
    StrPat strPat = 9;
  }
}

message LiteralExpr {
  Literal literal = 1;
  int32 typeOf = 2;
}

message Branch {
  int32 pattern = 1;
  int32 resultExpr = 2;
  int32 guardExpr = 3;
}

message MatchExpr {
  int32 argExpr = 1;
  repeated Branch branches = 2;
}

message Region {
  int32 start = 1;
  int32 end = 2;
}

message TypedExpr {
  oneof value {
    GenericExpr genericExpr = 1;
    AnnotationExpr annotationExpr = 2;
    LambdaExpr lambdaExpr = 3;
    VarExpr varExpr = 4;
    AppExpr appExpr = 5;
    LetExpr letExpr = 6;
    LiteralExpr literalExpr = 7;
    MatchExpr matchExpr = 8;
    LoopExpr loopExpr = 9;
    RecurExpr recurExpr = 10;
  }
  Region region = 11;
}

message Let {
  int32 name = 1;
  RecursionKind rec = 2;
  int32 expr = 3;
}

message ExternalDef {
  int32 name = 1;
  int32 typeOf = 2;
}

message PackageSourceHash {
  string ident = 1;
}

message Package {
  repeated string strings = 1;
  repeated Type types = 2;
  repeated DefinedType definedTypes = 3;
  repeated Pattern patterns = 4;
  repeated TypedExpr expressions = 5;

  int32 packageName = 6;
  repeated Imports imports = 7;
  repeated ExportedName exports = 8;
  repeated Let lets = 9;
  repeated ExternalDef externalDefs = 10;
  PackageSourceHash sourceHash = 11;
}

message Packages {
  repeated Package packages = 1;
}

// Message representing a Version using Semantic Versioning
message Version {
  int64 major = 1;
  int64 minor = 2;
  int64 patch = 3;
  string pre_release = 4;
  string build = 5;
}

// Message representing a Descriptor for versioning and identification
message LibDescriptor {
  Version version = 1;          // Semantic versioning information
  repeated string hashes = 2;   // List of relevant hashes for verification
  repeated string uris = 3;     // URIs where the dependency can be obtained
}

// Message representing the history of versions for a Library or Dependency
message LibHistory {
  LibDescriptor previous_patch = 1;  // Descriptor for the previous patch version, if any
  LibDescriptor previous_minor = 2;  // Descriptor for the previous minor version, if any
  LibDescriptor previous_major = 3;  // Descriptor for the previous major version, if any
  LibDescriptor previous_prerelease = 4; // Descriptor for the previous prerelease if any
  repeated LibDescriptor others = 5; // Some links to other previous versions to improve navigation speed
}

// Message representing a Dependency on another Library
message LibDependency {
  string name = 1;               // Name of the dependent library
  LibDescriptor desc = 2;           // Descriptor of the dependent library (must have non-empty hashes)
}

// Message representing a Library
message Library {
  string name = 1;
  int32 depth = 2;              // Depth in the dependency graph
  string vcs_indent = 3;        // Version control system identifier (e.g., git:commit:aae)
  string repo_uri = 4;          // canonical repo for the this library at this version
  LibDescriptor descriptor = 5; // Contains versioning and identification info

  // Exported interfaces that other libraries can use
  repeated Interface exported_ifaces = 6;

  // Internal packages within the library
  repeated Package internal_packages = 7;

  // Public dependencies that are exposed to consumers of this library
  repeated LibDependency public_dependencies = 8;

  // Private dependencies used internally by the library
  repeated LibDependency private_dependencies = 9;

  // Unused transitive public deps (to compose, we must be able to solve compatible versions of these)
  repeated LibDependency unused_transitive_public_dependencies = 10;

  // Historical versions of the library
  LibHistory history = 11;

  // Default main package, may be empty for libraries
  string default_main = 12;
}
